# kiosk_pos

./: .gitignore  data.yaml  detect_rocm.py  download_dataset.py  instructions.md  main.py  pos_server.py  pyproject.toml  test.html  test_detection.py  train_yolo.ipynb
