[project]
name = "nadali"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.123.9",
    "gdown>=5.2.0",
    "gtts>=2.5.4",
    "ipykernel>=7.1.0",
    "mediapipe>=0.10.21",
    "pip>=25.3",
    "ultralytics>=8.3.235",
    "uvicorn>=0.38.0",
    "websockets>=15.0.1",
]
